# LGSTrayEx

./: .editorconfig  .gitignore  Directory.Build.props  LGSTrayBattery.sln  MULTI_USER_CONFIG.md  detection_issues.md  device-hotplug.md  dj_notifications.md  publish.ps1  publish.py  readme.md  refactor.md
LGSTrayCore/: IServiceExtension.cs  LGSTrayCore.csproj  LogiDevice.cs  ServiceCollectionExtensions.cs
LGSTrayCore.Tests/: LGSTrayCore.Tests.csproj
LGSTrayHID/: AssemblyInfo.cs  Hidpp20.cs  HidppDevice.cs  HidppDevices.cs  HidppManagerContext.cs  HidppManagerService.cs  HidppReceiver.cs  LGSTrayHID.csproj  Program.cs
LGSTrayHID.Tests/: BatteryAdcMeasurementTests.cs  BatterySOCTests.cs  BridgeChannelTests.cs  BridgeUnwrapTests.cs  FrameBuildingTests.cs  FrameParsingTests_0x50.cs  FrameParsingTests_0x51.cs  LGSTrayHID.Tests.csproj  LogFrame.cs
LGSTrayHID/HidApi/libhidapi/: CMakeLists.txt  readme.md
LGSTrayPrimitives/: AppDataPaths.cs  AppSettings.cs  BuildInfo.cs  DataSourceHelper.cs  DeviceType.cs  DiagnosticLogger.cs  LGSTrayPrimitives.csproj  PowerSupplyStatus.cs
LGSTrayPrimitives.Tests/: LGSTrayPrimitives.Tests.csproj  MessageStructsTests.cs
LGSTraySetup/: .gitignore  LGSTraySetup.wixproj  Package.wxs
LGSTrayUI/: App.config  App.xaml  App.xaml.cs  AppExtensions.cs  BatteryIconDrawing.cs  CheckTheme.cs  LGSTrayUI.csproj  LogiDeviceCollection.cs  Program.cs  (+6 more)
LGSTrayUI.Tests/: LGSTrayUI.Tests.csproj  LogiDeviceCollectionModeSwitchTests.cs  LogiDeviceCollectionTests.cs  MQTTServiceBatteryTests.cs  NotificationServiceTests.cs  SettingsManagerTests.cs
(+129 files in other folders)
